--- a/index.html
+++ b/index.html
@@ -19,29 +19,31 @@
 
 		<div class="intro-wrapper">
 			<div class="left-column">
-				<img src="/images/placeholder_img.png">
-				<h6 id='theme-options'>Theme Options</h6>
-				<div class="theme-dot-choice">
-					<div data-mode="light" id='light-mode' class="theme-dot"></div>
-					<div data-mode="purple" id='purple-mode' class="theme-dot"></div>
-					<div data-mode="green" id='green-mode' class="theme-dot"></div>
-					<div data-mode="blue" id='dark-mode' class="theme-dot"></div>
-				</div>
-			</div>
-			<div class="right-column">
 				<h5>Acerca de mi</h5>
 				<p>
 					Soy un programador autodidacta de 20 años radicado en Zárate, Buenos Aires. Actualmente estoy aprendiendo <strong>Docker</strong> y mejorando mi conocimiento tanto en <strong>Django</strong> como en <strong>Python</strong>.
 				</p>
-				<p class="skills">
-					<a target="_blank" href="https://www.linkedin.com/in/conrado-franceschi-aa71891b0/">
-						<img src="/images/linkedin.svg" alt="linkedin">
-					</a>
-					<a target="_blank" href="https://github.com/Thestias">
-						<img src="/images/github.svg" alt="github">
-					</a>
-				</p>
 
+			</div>
+
+			<div class="right-column">
+				<p class="skills">
+					<a target="_blank" href="https://www.linkedin.com/">
+						<img class="svg-external" src="{% static 'images/linkedin.svg' %}" alt="linkedin">
+					</a>
+					<a target="_blank" href="https://github.com/">
+						<img class="svg-external" src="{% static 'images/github.svg' %}" alt="github">
+					</a>  
+				</p>
+				<div class="theme-div">
+					<h6 id='theme-options'>Theme Options</h6>
+					<div class="theme-dot-choice">
+						<div data-mode="light" id='light-mode' class="theme-dot"></div>
+						<div data-mode="purple" id='purple-mode' class="theme-dot"></div>
+						<div data-mode="green" id='green-mode' class="theme-dot"></div>
+						<div data-mode="blue" id='dark-mode' class="theme-dot"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
