Fixed bad img path

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			<div class="right-column">
 				<p class="skills">
 					<a target="_blank" href="https://www.linkedin.com/">
-						<img class="svg-external" src="{% static 'images/linkedin.svg' %}" alt="linkedin">
+						<img class="svg-external" src="/images/linkedin.svg" alt="linkedin">
 					</a>
 					<a target="_blank" href="https://github.com/">
-						<img class="svg-external" src="{% static 'images/github.svg' %}" alt="github">
+						<img class="svg-external" src="/images/github.svg" alt="github">
 					</a>  
 				</p>
 				<div class="theme-div">
