--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Conrado Franceschi</title>
-	
+    <link class="favicon" rel="shortcut icon" type="images/svg" href="images/favicon.svg"/>
 </head>
 <body>
 
