--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <blockquote>
                 <p>
                     Soy un programador autodidacta de 21 años radicado en Zárate, Buenos Aires. Actualmente estoy
-                    aprendiendo <strong>Docker</strong> y mejorando mi conocimiento tanto en <strong>Django</strong>
+                    aprendiendo <strong>Docker</strong>, <strong>React</strong> y mejorando mi conocimiento tanto en <strong>Django</strong>
                     como en <strong>Python</strong>.
                 </p>
             </blockquote>
@@ -49,14 +49,9 @@
                 </div>
                 <div class="skills-list">
                     <ul>
-                        <li>--> Ingles</li>
+                        <li>--> <a target="_blank"> href="https://www.efset.org/cert/t4keie">Ingles Certificado</a></li>
                         <li>--> Javascript Basico</li>
                         <li>--> PostgreSQL/SQLite</li>
-                    </ul>
-                </div>
-                <div class="skills-list">
-                    <ul>
-                        <li>--> GO Basico</li>
                     </ul>
                 </div>
             </div>
