--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="skills-list">
                     <ul>
-                        <li>--> <a target="_blank"> href="https://www.efset.org/cert/t4keie">Ingles Certificado</a></li>
+                        <li>--> <a target="_blank" href="https://www.efset.org/cert/t4keie">Ingles Certificado</a></li>
                         <li>--> Javascript Basico</li>
                         <li>--> PostgreSQL/SQLite</li>
                     </ul>
