Improved skills style

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <blockquote>
                 <p>
                     Soy un programador autodidacta de 21 años radicado en Zárate, Buenos Aires. Actualmente estoy
-                    aprendiendo <strong>Docker</strong>, <strong>React</strong> y mejorando mi conocimiento tanto en <strong>Django</strong>
+                    aprendiendo <strong>Docker</strong>, <strong>React</strong> y mejorando mi conocimiento tanto en
+                    <strong>Django</strong>
                     como en <strong>Python</strong>.
                 </p>
             </blockquote>
@@ -42,16 +43,16 @@
             <div class="skills-wrapper">
                 <div class="skills-list">
                     <ul>
-                        <li>--> Python</li>
-                        <li>--> Django</li>
-                        <li>--> HTML5/CSS3</li>
+                        <li>Python</li>
+                        <li>Django</li>
+                        <li>HTML5/CSS3</li>
                     </ul>
                 </div>
                 <div class="skills-list">
                     <ul>
-                        <li>--> <a target="_blank" href="https://www.efset.org/cert/t4keie">Ingles Certificado</a></li>
-                        <li>--> Javascript Basico</li>
-                        <li>--> PostgreSQL/SQLite</li>
+                        <li><a target="_blank" href="https://www.efset.org/cert/t4keie">Ingles Certificado</a></li>
+                        <li>Javascript Basico</li>
+                        <li>PostgreSQL/SQLite</li>
                     </ul>
                 </div>
             </div>
@@ -71,11 +72,15 @@
 
                     </p>
                     <p><strong>Tecnologias utilizadas</strong></p>
-                    <div class="tec-used">
+                    <div class="proyect-skills">
                         <ul>
-                            <li>--> Python --> Django</li>
-                            <li>--> TailwindCSS --> Javascript</li>
-                            <li>--> SQLite</li>
+                            <li>Python</li>
+                            <li>Django</li>
+                            <li>TailwindCSS</li>
+                        </ul>
+                        <ul>
+                            <li>Javascript</li>
+                            <li>SQLite</li>
                         </ul>
                     </div>
                 </div>
@@ -90,11 +95,14 @@
                         <a target="_blank" href="https://github.com/Thestias/Random-Movie-Website">Codigo</a>
                     </p>
                     <p><strong>Tecnologias utilizadas</strong></p>
-                    <div class="tec-used">
+                    <div class="proyect-skills">
                         <ul>
-                            <li>--> Python --> Django</li>
-                            <li>--> Django Rest Framework</li>
-                            <li>--> SQLite</li>
+                            <li>Python</li>
+                            <li>Django</li>
+                        </ul>
+                        <ul>
+                            <li>Django Rest Framework</li>
+                            <li>SQLite</li>
                         </ul>
                     </div>
                 </div>
@@ -109,10 +117,13 @@
                         <a target="_blank" href="https://github.com/Thestias/Minimal-Blog">Codigo</a>
                     </p>
                     <p><strong>Tecnologias utilizadas</strong></p>
-                    <div class="tec-used">
+                    <div class="proyect-skills">
                         <ul>
-                            <li>--> Python --> Django</li>
-                            <li>--> SQLite</li>
+                            <li>Python</li>
+                            <li>Django</li>
+                        </ul>
+                        <ul>
+                            <li>SQLite</li>
                         </ul>
                     </div>
                 </div>
