--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <ul>
                         <li>Python</li>
                         <li>Django</li>
-                        <li>HTML5/CSS3</li>
+                        <li>HTML/CSS</li>
                     </ul>
                 </div>
                 <div class="skills-list">
