New Portfolio design

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title></title>
 
     <!-- Scripts -->
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 
     <script src="https://unpkg.com/rough-notation/lib/rough-notation.iife.js"></script>
 
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" type="text/css" href="css/base.css">
+    <link rel="stylesheet" type="text/css" href="base.css">
     <link id="theme-style" rel="stylesheet" type="text/css" href="">
 
 </head>
@@ -32,7 +32,7 @@
             <!-- should this change depending on which section the browser is? -->
             <a href="#contacto">Contacto</a>
             <div class="line"></div>
-            <img data-mode="light" id="theme-icon" src="/images/brightness.svg">
+            <img data-mode="light" id="theme-icon" src="brightness.svg">
             <div class="line"></div>
             <a href="#proyectos">Proyectos</a>
         </div>
@@ -74,7 +74,7 @@
         </div>
 
         <div style="text-align: center;">
-            <img id="mountain-img" alt="mountain-img" src="images/mountain-f.svg" style="height: 32px; width: 32px;">
+            <img id="mountain-img" alt="mountain-img" src="mountain-f.svg" style="height: 32px; width: 32px;">
         </div>
 
         <div class="technologies-wrapper">
