New Portfolio design

--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
                         <li>HTML/CSS</li>
                     </ul>
                     <ul>
-                        <li>SQLite</li>
+                        <li>PostgreSQL</li>
+                        <li>Javascript</li>
+                        <li>Docker</li>
                     </ul>
                 </div>
             </div>
@@ -180,6 +182,7 @@
                     </ul>
                     <ul>
                         <li>SQLite</li>
+                        <li>Django REST Framework</li>
                     </ul>
                 </div>
             </div>
