--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <div class="line"></div>
             <a href="#proyectos">Proyectos</a>
         </div>
-        <div class="mini-container down-resume"><a href="#">Resume</a></div>
+        <div class="mini-container down-resume"><a href="files/Conrado_Franceschi_FullStack_2021_Junio.pdf">Resume</a>
+        </div>
     </nav>
 
 
