--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Conrado Franceschi</title>
 
     <!-- Scripts -->
     <script type="text/javascript" src="js/index.js"></script>
