--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Conrado Franceschi</title>
+    <title></title>
 
     <!-- Scripts -->
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 
     <script src="https://unpkg.com/rough-notation/lib/rough-notation.iife.js"></script>
 
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" type="text/css" href="css/base.css">
+    <link rel="stylesheet" type="text/css" href="base.css">
     <link id="theme-style" rel="stylesheet" type="text/css" href="">
 
 </head>
@@ -32,12 +32,11 @@
             <!-- should this change depending on which section the browser is? -->
             <a href="#contacto">Contacto</a>
             <div class="line"></div>
-            <img data-mode="light" id="theme-icon" src="images/brightness.svg">
+            <img data-mode="light" id="theme-icon" src="brightness.svg">
             <div class="line"></div>
             <a href="#proyectos">Proyectos</a>
         </div>
-        <div class="mini-container down-resume"><a href="files/Conrado_Franceschi_FullStack_2021_Junio.pdf">Resume</a>
-        </div>
+        <div class="mini-container down-resume"><a href="#">Resume</a></div>
     </nav>
 
 
@@ -65,26 +64,31 @@
 
     <article class="skills">
 
-        <div class="technologies-wrapper">
-            <ul>
-                <li>Python</li>
-                <li>Django</li>
-                <li>Django REST Framework</li>
-                <li>HTML/CSS</li>
-            </ul>
+        <div class="header-highlight-wrapper">
+            <h2>Skills</h2>
         </div>
 
-        <div style="text-align: center;">
-            <img id="mountain-img" alt="mountain-img" src="images/mountain-f.svg" style="height: 32px; width: 32px;">
-        </div>
 
-        <div class="technologies-wrapper">
-            <ul>
-                <li>PostgreSQL/SQLite</li>
-                <li>Javascript</li>
-                <li>Ingles</li>
-                <li>Docker</li>
-            </ul>
+        <div class="skills-wrapper">
+            <div class="technologies-wrapper">
+                <ul>
+                    <li>Python</li>
+                    <li>Django</li>
+                    <li>Django REST Framework</li>
+                    <li>HTML/CSS</li>
+                </ul>
+            </div>
+            <div style="text-align: center;">
+                <img id="mountain-img" alt="mountain-img" src="mountain-f.svg" style="height: 32px; width: 32px;">
+            </div>
+            <div class="technologies-wrapper">
+                <ul>
+                    <li>PostgreSQL/SQLite</li>
+                    <li>Javascript</li>
+                    <li>Ingles</li>
+                    <li>Docker</li>
+                </ul>
+            </div>
         </div>
 
 
@@ -132,9 +136,7 @@
                         <li>HTML/CSS</li>
                     </ul>
                     <ul>
-                        <li>PostgreSQL</li>
-                        <li>Javascript</li>
-                        <li>Docker</li>
+                        <li>SQLite</li>
                     </ul>
                 </div>
             </div>
@@ -183,7 +185,6 @@
                     </ul>
                     <ul>
                         <li>SQLite</li>
-                        <li>Django REST Framework</li>
                     </ul>
                 </div>
             </div>
