--- a/index.html
+++ b/index.html
@@ -251,13 +251,13 @@
                 <form action="https://formspree.io/mrgyjaeq" method="POST">
 
                     <label>Name</label>
-                    <input class="input-field" type="text" name="name">
+                    <input class="input-field" type="text" name="name" required>
 
                     <label>Email</label>
-                    <input class="input-field" type="email" name="email">
+                    <input class="input-field" type="email" name="email" required>
 
                     <label>Message</label>
-                    <textarea class="input-field" name="message"></textarea>
+                    <textarea class="input-field" name="message" required></textarea>
 
                     <input id="btnContact" type="submit" name="Submit" value='Submit'>
                 </form>
